<resources>
    <string name="app_name">LeaveManagement</string>
    <string name="facebook_app_id">2269108476725268</string>
    <string name="facebook_login_protocol_scheme">fb2269108476725268</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="leave_status">Leave Status</string>
    <string name="view_request">View Request</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="leave_reason">Leave Reason</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="leave_reason_type">Leave type</string>
    <string name="logout">Logout</string>
    <string name="approved">Approve</string>
    <string name="reject">Reject</string>
    <string name="allinonesocialmedia">All in one social media</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
</resources>
