<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5"
            android:background="#9e9e9e"
            app:cardCornerRadius="@dimen/margin15"
            app:cardElevation="@dimen/margin5"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin5"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize16"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin5"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/leave_reason_type"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_leave_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin5"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize16"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/leave_status"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin5"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize16"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_marginRight="@dimen/margin5"
                    android:layout_marginBottom="@dimen/margin5"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin5"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:padding="@dimen/margin5"
                    android:text="title"
                    android:textColor="@color/grey100" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <FrameLayout
        android:layout_width="1000dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin10">

        <!-- Put your menu items here. The first one will be shown at the horizontal start. -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red200">

            <TextView
                android:id="@+id/button_delete"
                android:layout_width="@dimen/margin100"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize16" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green200">

            <TextView
                android:id="@+id/button_edit"
                android:layout_width="@dimen/margin100"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize16" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>