<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ApplyLeaveActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_apply_leave"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_border"
            android:layout_marginTop="@dimen/margin10">

            <Spinner
                android:id="@+id/spin_leave_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_border"
            android:layout_marginTop="@dimen/margin10">

            <Spinner
                android:id="@+id/spin_leave_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin10">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:editable="false"
                    android:clickable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_startdate"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:clickable="false"
                    android:hint="@string/end_date"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_enddate"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin10"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_leave_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leave_reason"
                android:imeOptions="actionDone"
                android:scrollHorizontally="false"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength ="2000"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin10"/>

    </LinearLayout>


</LinearLayout>