<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:background="#9e9e9e"
        app:cardCornerRadius="@dimen/margin15"
        app:cardElevation="@dimen/margin5"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:padding="@dimen/margin5"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/margin5"
                android:text="user name"
                android:textSize="@dimen/textsize16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin5"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leave_reason_type"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_leave_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leave_status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize16"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_approval_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/margin10"
                android:padding="@dimen/margin5"
                android:drawableLeft="@drawable/ic_done"
                android:drawablePadding="@dimen/margin10"
                android:text="user name"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin5"
                android:textSize="@dimen/textsize15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="@dimen/margin5"
                android:text="title"
                android:textColor="@color/grey100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginRight="@dimen/margin5"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_approved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_correct"
                        android:layout_marginRight="@dimen/margin5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5"
                        android:text="@string/approved"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_marginRight="@dimen/margin5"/>

                <LinearLayout
                    android:id="@+id/ll_reject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_finger"
                        android:layout_marginRight="@dimen/margin5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5"
                        android:text="@string/reject"
                        android:textColor="@color/red"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>